# statistics-study

./: README.md  empirical_model.py  model.py  pyproject.toml
resources/data/: anp-data.json
resources/latex/descriptive/: descriptive
resources/latex/dsc/: Bandeira.tex  Estados.tex  Região.tex
resources/latex/empirical/: bandeiras-nacionais.txt  interior.txt  metropolis.txt  outras-bandeiras.txt  parana.txt  sp3.txt
resources/tables/: bandeiras-nacionais.txt  bandeiras.txt  interior.txt  metropolis.txt  outras-bandeiras.txt  parana.txt  sp3.txt
