[tool.poetry]
name = "statistics-study"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
matplotlib = "^3.5.2"
PyQt5 = "^5.15.6"
scipy = "^1.8.0"
seaborn = "0.11.2"
pandas = "^1.4.2"
ipython = "^8.3.0"
[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
